# data-engineering-zoomcamp

./: .gitignore  DEZ-TLC Trip Record Data.ipynb  Module_01_Docker_Terraform_Consolidated_Transcripts.md  Module_02_Workflow_Orchestration_Consolidated_Transcripts.md  Module_03_Data_Warehouse_Consolidated_Transcripts.md  Module_04_Analytics_Engineering_Consolidated_Transcripts.md  Module_05_Data_Platforms_Consolidated_Transcripts.md  Module_06_Batch_Processing_Consolidated_Transcripts.md  Module_07_Streaming_Consolidated_Transcripts.md  README.md  fetch_transcripts.py
anaconda_projects/944e9e47-04d2-403b-bb1d-fda3431d6f55/: TLC Trip Record Data-zoomcamp.ipynb
anaconda_projects/db/: project_filebrowser.db
my-work/: README.md
my-work/01-docker-terraform/: NOTES.md
my-work/01-docker-terraform/pipeline/: Dockerfile  README.md  docker-compose.yml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml  sql-refresher-notes.md
my-work/02-workflow-orchestration/: NOTES.md
my-work/02-workflow-orchestration/flows/: 06_gcp_kv.yaml
